fixed text overflow

--- a/movie.css
+++ b/movie.css
@@ -82,6 +82,9 @@ input{
 h3{
     display: block;
     color: white;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .column{
